--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>gymnasium Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
   <dependencies>
     <!-- 单元测试 -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.1</version>
     </dependency>
 
     <!-- 1.日志 -->
@@ -20,16 +24,17 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.1</version>
+      <version>1.2.12</version>
     </dependency>
 
     <!-- 2.数据库 -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.37</version>
+      <version>8.0.32</version>
       <scope>runtime</scope>
     </dependency>
+
     <dependency>
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
@@ -62,7 +67,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.5.4</version>
+      <version>2.13.5</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -139,6 +144,7 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2</version>
     </dependency>
+
   </dependencies>
   <build>
     <finalName>gymnasium</finalName>
